methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:7: error: value avance is not a member of Unit
{setCouleurBrosse(c);baisseBrosse();leveBrosse()avance();gauche();avance();baisseBrosse();leveBrosse();gauche();avance();gauche();avance();gauche();}
                                                ^